# -real-time-counterparty-sentiment-analysis

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: events.jsonl
scripts/: fetch_news.py
src/counterparty_sentiment/: __init__.py  analyzer.py  backtest.py  cli.py  entity_linking.py  extraction.py  ingestion.py  lexicons.py  market_data.py  ml.py  models.py  returns.py  streaming.py
tests/: test_analyzer.py  test_backtest.py  test_cli.py  test_entity_linking.py  test_ml.py  test_returns.py  test_static_site.py  test_streaming.py
web/: app.js  styles.css
